Fix Amplify deployment to include public assets and logo

--- a/amplify.yml
+++ b/amplify.yml
@@ -13,9 +13,12 @@ frontend:
         - pnpm build
         - echo "Build completed successfully"
   artifacts:
-    baseDirectory: .next
+    baseDirectory: .
     files:
-      - '**/*'
+      - '.next/**/*'
+      - 'public/**/*'
+      - 'node_modules/**/*'
+      - 'package.json'
   cache:
     paths:
       - node_modules/**/*
